...
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            </imageView>
                            <searchBar contentMode="redraw" barStyle="blackTranslucent" searchBarStyle="minimal" placeholder="Search for available mentors" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q43-hf-nq4">
                                <rect key="frame" x="0.0" y="20" width="372" height="56"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileImg" translatesAutoresizingMaskIntoConstraints="NO" id="4Am-cK-CyS">
                                                    <rect key="frame" x="6" y="0.0" width="130" height="130"/>
                                                    <constraints>
...
                                    <constraint firstAttribute="width" constant="180" id="toJ-jG-xxf"/>
                                </constraints>
                                <state key="normal" title="Request Mentorship">
                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                            </connections>
                                        </barButtonItem>
                                        <barButtonItem key="rightBarButtonItem" title="Done" style="done" id="kqt-cj-kuO">
                                            <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            <connections>
...
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <state key="normal" title="Cancel Mentorship">
                                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                    </state>
...
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                <items>
                                    <navigationItem title="Update Information" id="TcB-lv-6QU">
                                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="SPg-bR-BV0">
                                            <connections>
...
                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                            <items>
                                <navigationItem title="Organizations" id="0oU-Pu-cKP">
                                    <barButtonItem key="leftBarButtonItem" title="Back" id="25O-h4-jWp">
                                        <connections>
                                            <action selector="backButton:" destination="oHu-gH-auW" id="gzC-ZH-xRY"/>
...
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                <items>
                                    <navigationItem title="Add Organization" id="PHS-PG-FeS">
                                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="lg6-xc-fwO">
                                            <connections>
...
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                <items>
                                    <navigationItem title="Bio" id="1aJ-QP-ILe">
                                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="tOm-B0-3s4">
                                            <connections>
...
        <scene sceneID="wUb-PD-NcB">
            <objects>
                <tableViewController storyboardIdentifier="menteeRequests" title="Mentee Requests" id="oRr-6n-GaG" customClass="MenteeRequestListTableViewController" customModule="Trajectory" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="RFn-DB-Oai">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
...
                                    <constraint firstAttribute="height" constant="30" id="y9I-u8-Ste"/>
                                </constraints>
                                <state key="normal" title="Decline"/>
                                <connections>
                                    <action selector="decline:" destination="IPk-DS-Qtw" eventType="touchUpInside" id="tbi-SZ-bBj"/>
...
                                    <constraint firstAttribute="width" constant="130" id="SsP-7S-AIQ"/>
                                </constraints>
                                <state key="normal" title="Set End Date">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                    <constraint firstAttribute="height" constant="30" id="sxN-eH-e9g"/>
                                </constraints>
                                <state key="normal" title="Set Date and Accept"/>
                                <connections>
                                    <action selector="setDateandAccept:" destination="gVc-ag-QMw" eventType="touchUpInside" id="w9J-P6-tIh"/>
...
        <scene sceneID="LO3-fv-x8Z">
            <objects>
                <tableViewController storyboardIdentifier="settings" title="Settings" id="CaC-dF-lIC" customClass="SettingsTableViewController" customModule="Trajectory" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="my4-6d-4YY">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
...
                                                    </connections>
                                                </switch>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Notifications" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C5X-us-SO3">
                                                    <rect key="frame" x="16" y="12" width="96.5" height="20.5"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                    </connections>
                                                </switch>
